--- a/formulario.html
+++ b/formulario.html
@@ -6,6 +6,13 @@
 	<title>SITIO WEB ROISINBLIT</title>
 	<script src="https://cdn.tailwindcss.com"></script>
 	  <link rel="stylesheet" href="css/index.css">
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+
+<script>
+    (function() {
+        emailjs.init("q1k3gCctcv_MMdMOy");
+    })();
+</script>
 </head>
 <body>
 <nav class="nav-container">
@@ -65,15 +72,49 @@
     </div>
   </section>
 	<section class="relative py-16 bg-blueGray-200">
-    
-            
           </div>
           <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
             <div class="flex flex-wrap justify-center">
               <div class="w-full lg:w-9/12 px-4">
-                <p class="mb-4 text-lg leading-relaxed text-blueGray-700">
-                  TEXTO
-                </p>
+               <div class="max-w-md mx-auto mt-10 bg-white p-8 rounded-xl shadow-md">
+        <h2 class="text-2xl font-bold text-center mb-6">Formulario de Contacto</h2>
+
+        <form id="contactForm" class="space-y-5">
+
+            <div>
+                <label class="font-semibold" for="nombre">Nombre </label>
+                <input 
+                    type="text" id="nombre" name="nombre" required
+                    class="w-full mt-1 p-3 rounded-lg border border-gray-300"
+                >
+            </div>
+
+            <div>
+                <label class="font-semibold" for="email">Correo Gmail </label>
+                <input 
+                    type="email" id="email" name="email" required
+                    placeholder="tunombre@gmail.com"
+                    class="w-full mt-1 p-3 rounded-lg border border-gray-300"
+                >
+            </div>
+
+            <div>
+                <label class="font-semibold" for="mensaje">Comentario </label>
+                <textarea 
+                    id="mensaje" name="mensaje" required
+                    class="w-full mt-1 p-3 rounded-lg border border-gray-300 h-32 resize-y"
+                ></textarea>
+            </div>
+
+            <button 
+                type="submit"
+                class="w-full bg-orange-500 hover:bg-orange-600 text-white p-3 rounded-lg text-lg font-semibold"
+            >
+                Enviar
+            </button>
+
+        </form>
+    </div>
               </div>
             </div>
           </div>
@@ -92,10 +133,7 @@
      class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
      CONTACTO
   </a>
-  <a href="formulario.html"
-     class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
-     FORMULARIO
-  </a>
+  
         </div>
         </div><!--AGREGAR BOTONES AL COSTADO IZQUIERDO PARA CONTACTO Y FORMULARIO-->
     </div>
@@ -103,5 +141,7 @@
   </div>
 </footer>
 <script src="js/nav.js"></script>
+<script src="form.js"></script>
+
 </body>
 </html>
